added US realms, searchable selectbox for realms, reworked data fetching, added progress to achievements and criteria

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,14 @@
+a {
+  color: #d8d8d8;
+}
+
+a:hover {
+  color: #00bc8c;
+  text-decoration: underline;
+}
+
 .progress {
   background: #444;
+  height: 16px;
+  font-size: 12px;
 }
