--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,84 @@ a:hover {
   text-decoration: underline;
 }
 
+.full-cover-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 .progress {
   background: #444;
   height: 16px;
   font-size: 12px;
   font-family: "Arial", sans-serif;
   font-weight: 700;
+}
+
+.progress-bar-circle {
+  position: relative;
+}
+
+.progress-bar-percent,
+.progress-bar-status {
+  display:block;
+  position: absolute;
+  text-align: center;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 0.8rem;
+}
+
+.progress-bar-percent {
+  font-size: 1.6rem;
+  margin-bottom: 20px;
+  top: 45%;
+}
+
+.search-field {
+  position: relative;
+}
+
+.search-results {
+  width: 100%;
+  position: absolute;
+  top: 100%;
+  max-height: 400px;
+  overflow-y: auto;
+  background-color: #4d4d4d;
+  z-index: 10;
+}
+
+.serach-results-item {
+  border-bottom: 1px solid #333;
+  padding: 5px 10px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 14px;
+}
+.serach-results-item:hover {
+  background-color: #333;
+  color: #61befc;
+}
+.group-menu-card {
+  transition: background .2s;
+}
+.group-menu-card:hover {
+  background-color: #111;
+}
+.group-menu-card:hover a {
+  color: #61befc;
+}
+
+.group-menu-item-title {
+  height: 45px;
+  margin-top: 1rem;
+  font-size: 1.4rem;
+  text-align: center;
 }
 
 .loader-wrapper {
@@ -24,6 +96,7 @@ a:hover {
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.75);
+  z-index: 100;
 }
 
 .loader,
