--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,15 @@
 body {
   font-family: 'Roboto Condensed', sans-serif;
+  background-image: url('./bg.jpg');
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.character-page {
+  background: rgba(0,0,0,0.85);
+  min-height: 100vh;
 }
 
 a {
@@ -9,6 +19,13 @@ a {
 a:hover {
   color: #00bc8c;
   text-decoration: underline;
+}
+
+.header {
+  background-color: rgba(23,23,23,0.75);
+  padding: 20px 0;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #252525;
 }
 
 .full-cover-link {
