--- a/src/styles.css
+++ b/src/styles.css
@@ -18,23 +18,6 @@ body {
   color: #429019 !important;
 }
 
-.iconsmall {
-  width: 18px;
-  height: 18px;
-  margin-right: 0.25rem;
-}
-
-.iconsmall ins {
-  top: 0;
-  left: 0;
-  border-radius: 0.25rem;
-  border: 1px solid #444;
-}
-
-.iconsmall del {
-  display: none;
-}
-
 .character-page {
   position: relative;
   min-height: 100vh;
@@ -125,6 +108,7 @@ a:hover {
   font-weight: 700;
   text-align:center;
 }
+
 .progress-value {
   position:absolute;
   right:0;
@@ -134,6 +118,7 @@ a:hover {
 .progress-bar-circle {
   position: relative;
 }
+
 .progress-bar-label {
   position: absolute;
   text-align: center;
@@ -141,13 +126,16 @@ a:hover {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .progress-bar-status,
 .progress-bar-percent {
   display: block;
 }
+
 .progress-bar-status {
   font-size: 0.8rem;
 }
+
 .progress-bar-percent {
   font-size: 1.6rem;
 }
@@ -198,12 +186,15 @@ a:hover {
 .group-menu-card {
   transition: background .2s;
 }
+
 .group-menu-card:hover {
   background-color: #111;
 }
+
 .group-menu-card:hover a {
   color: #61befc;
 }
+
 .group-menu-item-title {
   height: 45px;
   margin-top: 1rem;
@@ -229,6 +220,7 @@ a:hover {
   width: 10em;
   height: 10em;
 }
+
 .loader {
   margin: 60px auto;
   font-size: 10px;
@@ -244,6 +236,7 @@ a:hover {
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
 }
+
 @-webkit-keyframes load8 {
   0% {
     -webkit-transform: rotate(0deg);
@@ -254,6 +247,7 @@ a:hover {
     transform: rotate(360deg);
   }
 }
+
 @keyframes load8 {
   0% {
     -webkit-transform: rotate(0deg);
@@ -263,4 +257,22 @@ a:hover {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
+}
+
+// WoWhead tooltips override
+.iconsmall {
+  width: 18px !important;
+  height: 18px !important;
+  margin-right: 0.25rem !important;
+}
+
+.iconsmall ins {
+  top: 0 !important;
+  left: 0 !important;
+  border-radius: 0.25rem !important;
+  border: 1px solid #444 !important;
+}
+
+.iconsmall del {
+  display: none !important;
 }
